# multitensor

./: .gitignore  Makefile  README.md  requirements.txt
C/: Makefile  cytensor.cp39-win_amd64.pyd  cytensor.pyx  setup.py  tensor.c  tensor.h  test.py
C++/: CMakeLists.txt  Makefile  cpptensor.cp39-win_amd64.pyd  cpptensor.pyi  main.cpp  tensor.cpp  tensor.hpp  tensor_bindings.cpp  test.py
C++/cpptensor/: tensor.cpp  tensor.hpp
